--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
+		"svelte-feather-icons": "^4.0.0",
 		"svelte-preprocess": "^4.10.6",
 		"tailwindcss": "^3.1.8",
 		"tslib": "^2.3.1",
@@ -35,6 +36,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"daisyui": "^2.31.0"
+		"daisyui": "^2.31.0",
+		"feather-icons": "^4.29.0"
 	}
 }
