--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
 		"axios": "^1.1.2",
 		"daisyui": "^2.31.0",
 		"feather-icons": "^4.29.0",
+		"gridjs": "^5.1.0",
+		"gridjs-svelte": "^2.1.1",
 		"svelte-select": "^4.4.7"
 	}
 }
