--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	"dependencies": {
 		"axios": "^1.1.2",
 		"daisyui": "^2.31.0",
+		"dayjs": "^1.11.5",
 		"feather-icons": "^4.29.0",
 		"gridjs": "^5.1.0",
 		"gridjs-svelte": "^2.1.1",
