--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"gridjs": "^5.1.0",
 		"gridjs-svelte": "^2.1.1",
 		"svelte-fa": "^3.0.3",
-		"svelte-select": "^4.4.7"
+		"svelte-select": "^4.4.7",
+		"theme-change": "^2.2.0"
 	}
 }
